# nvm-rs

./: Cargo.toml
src/: cli.rs  commands.rs  main.rs
src/handler/: arch.rs  current.rs  install.rs  list.rs  mod.rs  none.rs  proxy.rs  uninstall.rs  use_version.rs
src/utils/: config.rs  download.rs  mod.rs  platform.rs  system.rs
