[package]
name = "nvm-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
prettytable-rs = "0.10.0"
reqwest = {version = "0.12.5", features = ["json"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sysinfo = "0.30.13"
tokio = { version = "1.38.0", features = ["full"] }

# [[bin]]
# name = "nvm"
# path = "src/main.rs"